Add content for experiences

--- a/src/assets/fs/vanity.fs.html
+++ b/src/assets/fs/vanity.fs.html
@@ -1,4 +1,5 @@
-<pre><code class="language-md"># An ode to good bois
+<pre><code class="language-md">An ode to good bois
+===================
 
 A young woman stepped forward from the throng and asked, &ldquo;O' great prophet,
 tell us how we might find love that is unconditional, unwavering and unending.&rdquo;
