Make corrections and improvements

--- a/src/assets/fs/experience/fampay/software_engineer.py.fs.html
+++ b/src/assets/fs/experience/fampay/software_engineer.py.fs.html
@@ -13,29 +13,30 @@ class Role:
     def __init__(self, org, title, period, achievements):
         self.org = org
         self.title = title; self.period = period
-        self.achievements = achievements
+        self.achievements = '\n'.join(map(lambda ach: f'• {ach}', achievements))
 
     def display(self):
-        org.display()
+        self.org.display()
         print('')
-        print(f'{self.title}: {self.period}')
-        print("\n".join(map(lambda ach: f'• {ach}', self.achievements)))
+        print(self.title)
+        print(f'Period: {self.period}')
+        print(f'Achievements:\n{self.achievements}')
 
 </details>
 fampay = Org(
-    'FamPay',
-    <a class="hover:underline" href="https://fampay.in">'https://fampay.in'</a>,
-    'Bengaluru, India',
-    (
+    name='FamPay',
+    url=<a class="hover:underline" href="https://fampay.in">'https://fampay.in'</a>,
+    location='Bengaluru, India',
+    description=(
         'FamPay allows parents to send money to their teenage kids, who can '
         'then spend the money securely via UPI, P2P or through a debit card.'
     )
 )
 software_engineer = Role(
-    family,
-    'Software engineer',
-    'November &ndash; December 2019',
-    [
+    org=fampay,
+    title='Software engineer',
+    period='November &ndash; December 2019',
+    achievements=[
         'Wrote the core transaction API of the platform.',
         'Integrated with Cashfree payment gateway.',
         'Developed the transactional SMS delivery system.',
