Change source of font Inter to Google Fonts

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,9 @@
     <meta name="twitter:creator" content="@dhruvkb_">
 
     <!-- Inter typeface: https://rsms.me/inter/ -->
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400..700&display=swap" rel="stylesheet">
 
     <!-- Icons -->
     <link rel="icon" href="<%= BASE_URL %>favicon/favicon.png">
