Add a meta tag to set the theme color

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
     <meta name="twitter:site" content="@dhruvkb_">
     <meta name="twitter:creator" content="@dhruvkb_">
 
+    <meta name="theme-color" content="#073642">
+
     <!-- Inter typeface: https://rsms.me/inter/ -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
