--- a/src/assets/fs/experience/creative_commons/gsoc_engineer.js.fs.html
+++ b/src/assets/fs/experience/creative_commons/gsoc_engineer.js.fs.html
@@ -26,7 +26,7 @@ class Role {
     console.log(`Achievements:\n${this.achievements}`);
   }
 }</details>
-org = new Org(
+const org = new Org(
   'Creative Commons',
   <a class="hover:underline" href="https://opensource.creativecommons.org/">'https://opensource.creativecommons.org/'</a>,
   'Remote',
@@ -34,7 +34,7 @@ org = new Org(
 network devoted to educational access and expanding the range of creative \
 works available for others to build upon legally and to share.`
 );
-role = new Role(
+const role = new Role(
   org,
   'Software engineer',
   'May 2019 &ndash; August 2019',
