Replace Google Fonts with UNPKG to re-enable font variants

--- a/public/index.html
+++ b/public/index.html
@@ -60,9 +60,7 @@
     <meta name="theme-color" content="#073642">
 
     <!-- Inter typeface: https://rsms.me/inter/ -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/inter-ui@3.19.2/inter.css">
 
     <!-- Icons -->
     <link rel="icon" href="<%= BASE_URL %>favicon/favicon.png">
